--- a/ExamList/ExamListCoreTest/project.json
+++ b/ExamList/ExamListCoreTest/project.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "xunit": "2.1.0",
     "dotnet-test-xunit": "1.0.0-rc2-build10025",
-    "ExamListCore": { "target": "project" }
+    "ExamListCore": { "target": "project" },
+    "Microsoft.CodeCoverage": "1.0.2"
   },
 
   "frameworks": {
