--- a/ExamListCore/ExamListConsole/appsettings.json
+++ b/ExamListCore/ExamListConsole/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Paths": {
-    "Room": "",
-    "ExamParticipants": "",
-    "CourseParticipants": "",
-    "KlausurtrainerPoints": "",
-    "Output": ""
+    "Room": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\Rooms.txt",
+    "ExamParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrExam.txt",
+    "CourseParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrCourse.txt",
+    "KlausurtrainerPoints": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrKlausurtrainer.txt",
+    "Output": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\examlist.tex"
   }
 }
