--- a/ExamListCore/ExamListConsole/appsettings.json
+++ b/ExamListCore/ExamListConsole/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Paths": {
+  "PathsGrundOr": {
     "Room": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\Rooms.txt",
     "ExamParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrExam.txt",
     "CourseParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrCourse.txt",
     "KlausurtrainerPoints": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrKlausurtrainer.txt",
     "Output": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\examlist.tex"
+  },
+  "Paths": {
+    "Room": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\VuL\\Rooms.txt",
+    "ExamParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\VuL\\Exam.txt",
+    "CourseParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\VuL\\Course.txt",
+    "KlausurtrainerPoints": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\VuL\\Klausurtrainer.txt",
+    "Output": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\VuL\\examlist.tex"
   }
 }
