--- a/ExamListCore/ExamListConsole/appsettings.json
+++ b/ExamListCore/ExamListConsole/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "CourseName": "PathsVuL",
   "PathsGrundOr": {
     "Room": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\Rooms.txt",
     "ExamParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrExam.txt",
@@ -6,7 +7,7 @@
     "KlausurtrainerPoints": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrKlausurtrainer.txt",
     "Output": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\examlist.tex"
   },
-  "Paths": {
+  "PathsVuL": {
     "Room": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\VuL\\Rooms.txt",
     "ExamParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\VuL\\Exam.txt",
     "CourseParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\VuL\\Course.txt",
