Fixed a bug not using the whole capacity

--- a/ExamListCore/ExamListConsole/appsettings.json
+++ b/ExamListCore/ExamListConsole/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "CourseName": "PathsVuL",
+  "CourseName": "PathsGrundOr",
   "PathsGrundOr": {
     "Room": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\Rooms.txt",
     "ExamParticipants": "C:\\Users\\Justus\\Desktop\\Klausuren WS2017\\GrundOr\\GrundOrExam.txt",
