--- a/ExamList/ExamListCore/ExamListCore.csproj
+++ b/ExamList/ExamListCore/ExamListCore.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
