--- a/ExamList/ExamListConsole/ExamListConsole.csproj
+++ b/ExamList/ExamListConsole/ExamListConsole.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Version>1.0.0</Version>
+    <Authors>Justus Bonz</Authors>
+    <PackageProjectUrl>https://github.com/jasdefer/ExamList</PackageProjectUrl>
+    <Description>Distribute students to rooms for an exam.</Description>
   </PropertyGroup>
 
   <ItemGroup>
