--- a/ExamList/ExamListCore/ExamListCore.csproj
+++ b/ExamList/ExamListCore/ExamListCore.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Description></Description>
+    <PackageProjectUrl>https://github.com/jasdefer/ExamList</PackageProjectUrl>
+    <Authors>Justus Bonz</Authors>
+    <Version>0.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
